Revert "Add Redis-APM integration"
This reverts commit 902e9d6bdba72615d42925d73fce6f3432935966.

--- a/src/Orleans.Redis.Common/Orleans.Redis.Common.csproj
+++ b/src/Orleans.Redis.Common/Orleans.Redis.Common.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>$(TargetFrameworkNetStandard)</TargetFramework>
     <Configurations>Debug;Release;Test</Configurations>
@@ -21,7 +21,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elastic.Apm.StackExchange.Redis" Version="1.12.1" />
     <PackageReference Include="Microsoft.Orleans.Core" Version="$(Microsoft_Orleans_Core)" />
     <PackageReference Include="Serilog" Version="$(Serilog)" />
     <PackageReference Include="StackExchange.Redis" Version="$(StackExchange_Redis)" />
