--- a/src/Orleans.Streaming.Redis/Orleans.Streaming.Redis.csproj
+++ b/src/Orleans.Streaming.Redis/Orleans.Streaming.Redis.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>$(TargetFrameworkNetStandard)</TargetFramework>
     <Configurations>Debug;Release;Test</Configurations>
@@ -27,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elastic.Apm.StackExchange.Redis" Version="1.12.1" />
     <PackageReference Include="Microsoft.Orleans.Client" Version="$(Microsoft_Orleans_Client)" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="$(Microsoft_Orleans_Server)" />
     <PackageReference Include="Nito.AsyncEx.Tasks" Version="$(Nito_AsyncEx_Tasks)" />
